# Task-Tracking

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/data/: __init__.py  checklist.py  tasktracker.duckdb
app/db/: __init__.py  duckdb.py  progress.py  seeder.py
app/models/: __init__.py  schemas.py
data/: tasktracker.duckdb
scripts/: migrate_checklist_to_db.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: conftest.py  test_progress.py
